--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.5.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
+    "express-http-context": "^1.2.4",
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4"
